--- a/basics/index.html
+++ b/basics/index.html
@@ -2,13 +2,24 @@
 <html ng-app>
 <head>
   <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.3.0/angular.min.js"></script>
+  <script src="./js/todo.js" />
+  <link rel="stylesheet" href="./css/todo.css"/>
 </head>
 <body>
-  <div>
-    <label>Name:</label>
-    <input type="text" ng-model="yourName" placeholder="Enter a name here:" />
-    <hr />
-    <h1>Hello {{yourName}}!</h1>
+  <h2>Todo</h2>
+  <div ng-controller="TodoController">
+    <span>{{remaining()}} of {{todos.length}} remaining</span>
+    [<a href="" ng-click="archive()">archive</a>]
+    <ul class="unstyled">
+      <li ng-repeat="todo in todos">
+        <input type="checkbox" ng-model="todo.done">
+        <span class="done-{{todo-done}}">[[todo.text]]</span>
+      </li>
+    </ul>
   </div>
+  <form ng-submit="addTodo()">
+    <input type="text" ng-model="todoText" size="30" placeholder="add new todo here">
+    <input class="btn-primary" type="submit" value="add">
+  </form>
 </body>
 </html>
