--- a/basics/index.html
+++ b/basics/index.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html ng-app>
+<html ng-app="todoApp">
 <head>
   <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.3.0/angular.min.js"></script>
   <script src="./js/todo.js" />
