--- a/basics/index.html
+++ b/basics/index.html
@@ -1,26 +1,16 @@
 <!doctype html>
-<html ng-app="todoApp">
+<html ng-app="project">
   <head>
-    <script src="./js/angular.min.js"></script>
-    <script src="./js/todo.js"></script>
-    <link rel="stylesheet" href="./css/todo.css">
+    <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.3.0/angular.min.js"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.3.0/angular-resource.min.js"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.3.0/angular-route.min.js"></script>
+    <script src="https://cdn.firebase.com/js/client/1.0.18/firebase.js"></script>
+    <script src="https://cdn.firebase.com/libs/angularfire/0.8.0/angularfire.min.js"></script>
+    <link rel="stylesheet" href="./css/bootstrap.css">
+    <script src="./js/project.js"></script>
   </head>
   <body>
-    <h2>Todo</h2>
-    <div ng-controller="TodoController">
-      <span>{{remaining()}} of {{todos.length}} remaining</span>
-      [ <a href="" ng-click="archive()">archive</a> ]
-      <ul class="unstyled">
-        <li ng-repeat="todo in todos">
-          <input type="checkbox" ng-model="todo.done">
-          <span class="done-{{todo-done}}">{{todo.text}}</span>
-        </li>
-      </ul>
-      <form ng-submit="addTodo()">
-        <input type="text" ng-model="todoText"  size="30"
-               placeholder="add new todo here">
-        <input class="btn-primary" type="submit" value="add">
-      </form>
-    </div>
+    <h2>JavaScript Projects</h2>
+    <div ng-view></div>
   </body>
 </html>
